public class Knight extends Piece {
    void Main (Strings[] args) {
        System.out.println("Hello, World!");
    }
};